--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,10 @@
   --textmenu-color: #4a4a4a;
 }
 
+html {
+  font-family: var(--primary-font);
+}
+
 /*HEADER*/
 
 .header {
@@ -17,12 +21,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  background-color: white;
+  z-index: 1;
 }
 
 .logo {
   width: 155px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px;
 }
 
 .logo img {
@@ -30,7 +38,6 @@
 }
 
 .menu {
-  display: inline-block;
   margin-bottom: 13px;
 }
 
@@ -41,17 +48,27 @@
   margin: 20px;
   display: inline-block;
 }
+.menu ul li {
+  text-transform: uppercase;
+  display: inline-block;
+}
+
+.menu ul li a {
+  padding: 10px;
+  display: inline-block;
+}
 
 /*MAIN*/
 
 .main {
-  width: 100%;
   height: 100vh;
   background-color: var(--primary-color);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  top: 118px;
 }
 
 .main-title {
@@ -63,21 +80,16 @@
 .main-title span {
   display: block;
   text-align: center;
+  text-transform: capitalize;
 }
 
 @media all and (min-width: 768px) {
   .header {
-    position: none;
-    display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    margin: 20px 30px 20px 30px;
+    padding: 20px 30px;
   }
 
-  .menu li {
-    display: inline-block;
-  }
   .main-title {
     font-size: 40px;
   }
